# HYDE35

./: .gitignore  HYDE35strycture.txt  HYDE_and_ERA.ipynb  hyde35_country_iso_mapping.json  hyde35_country_mapping.json  hyde35_country_variable_units.json  hyde35_region_defs.json  hydePanel.ipynb  pyproject.toml
analysis/: __init__.py  build_climate_panel_0_2025.py  build_extended_panel.py  run_ag_impact_analysis.py  run_ag_impact_final.py  run_empirical_update.py  update_era5_panel.py
analysis/figures/: fig10_iv_dag.py  fig11_iron_laws.py  fig12_climate_channel.py  fig2_density_divergence.py  fig3_rolling_malthusian.py  fig4_breaks_survival.py  fig6_pathway_malthusian.py  fig7_manski_bounds.py  fig8_iv_identification.py  fig9_ols_vs_iv_periods.py  make_fig1_pathway_typology.py  make_fig5_ag_structure_evolution.py
analysis/paper1_escape/: clustering.py  paper1_explore.ipynb  spatial.py  survival.py  trajectories.py
analysis/paper2_malthus/: bounds.py  breaks.py  panels.py  paper2_explore.ipynb  regressions.py
analysis/paper3_climate/: climate_shocks.py  counterfactuals.py  local_projections.py  paper3_explore.ipynb  regime_switching.py
analysis/paper4_shadow/: __init__.py  dual_channel.py  (+8 more)
paper/: long_shadow.tex  main.tex
tests/: conftest.py  test_climate_shocks.py  test_clustering.py  test_dual_channel.py  test_escape_mechanism.py  test_loaders.py  test_local_projections.py  test_masks.py  test_panels.py  test_pathway_prediction.py  test_regressions.py  test_seasonality.py  test_survival.py  test_trajectories.py  test_uncertainty.py  test_variables.py
(+15 files in other folders)
