[project]
name = "hyde35-ugt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.1",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "lifelines>=0.27",
    "libpysal>=4.7",
    "esda>=2.5",
    "spreg>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pycountry>=22.3",
    "netCDF4>=1.6",
    "pyarrow>=12.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
